# cookiecutter-python-cli-app

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: input-for-demo.txt  update_demo.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.app_name }}/: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  {% if cookiecutter.license == 'agpl-3.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'bsd-3-clause' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'gpl-2.0' -%} LICENSE {%- endif %}
{{ cookiecutter.app_name }}/.github/workflows/: publish.yml  test.yml
{{ cookiecutter.app_name }}/docs/: changelog.md  cli.md  conf.py  index.md
{{ cookiecutter.app_name }}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py
{{ cookiecutter.app_name }}/tests/: __init__.py  test_cli.py  test_{{cookiecutter.package_name}}.py  utils.py
