[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{ cookiecutter.app_name }}"
authors = [{name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.email }}"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "{{ cookiecutter.development_status }}",
    "Environment :: Console",
    "Intended Audience :: Developers",
    {% if cookiecutter.license == 'mit' -%}
    "License :: OSI Approved :: MIT License",
    {% elif cookiecutter.license == 'gpl-3.0' -%}
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    {% elif cookiecutter.license == 'apache-2.0' -%}
    "License :: OSI Approved :: Apache Software License",
    {% elif cookiecutter.license == 'gpl-2.0' -%}
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    {% elif cookiecutter.license == 'bsd-3-clause' -%}
    "License :: OSI Approved :: BSD License",
    {% elif cookiecutter.license == 'agpl-3.0' -%}
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    {% elif cookiecutter.license == 'unlicense' -%}
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    {% endif -%}
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = "~=3.8"
dependencies = [
    "click",
{%- if cookiecutter.use_rich %}
    "rich_click",
{%- endif %}
]
dynamic = ["version", "description"]

[project.optional-dependencies]
tests = [
    "pytest"
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinxext-opengraph",
]
dev = [
    "{{ cookiecutter.app_name }}[tests,docs]",
    "black",
    "mypy",
    "pre-commit",
    "ruff",
]

[project.urls]
Documentation = "https://{{ cookiecutter.app_name }}.readthedocs.io/en/stable/"
Changelog = "https://{{ cookiecutter.app_name }}.readthedocs.io/en/stable/changelog.html"
"Source Code" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name }}"
"Issue Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name }}/issues"

[project.scripts]
{{ cookiecutter.app_name }} = "{{ cookiecutter.package_name }}.cli:cli"

{% if cookiecutter.package_name != cookiecutter.app_name.replace('-', '_') -%}
[tool.flit.module]
name = "{{ cookiecutter.package_name }}"
{% endif -%}

[tool.ruff]
select = ["ALL"]
ignore = [
    "E501",  # line too long, handled by black
    "COM",  # flake8-commas, handled by black
    "CPY",  # flake8-copyright
    "ISC001",  # single-line-implicit-string-concatenation
    "INP",  # flake8-no-pep420
]
src = ["src", "tests", "docs"]
target-version = "py38"  # the minimum Python version supported, used by pyupgrade

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401",  # unused import
]
"tests/**/test_*.py" = [
    "D",  # pydocstyle
    "ANN201",  # missing-return-type-undocumented-public-function
    "S101",   # assert
    "SIM300",   # yoda-conditions
    "PLR2004",   # magic-value-comparison
]
"docs/conf.py" = [
    "A001",  # builtin-variable-shadowing
]
"noxfile.py" = [
    "D100",  # undocumented-public-module
    "ERA001",  # commented-out-code
]

[tool.ruff.isort]
known-first-party = [
  "{{ cookiecutter.app_name }}",
  "tests",
]
lines-between-types = 0

[tool.ruff.pydocstyle]
convention = "google"
